--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
 <body>
   <noscript>
-    <strong>WorldWide Telescope requires JavaScript to run.</strong>
+    <strong>This page requires JavaScript to run.</strong>
   </noscript>
 
 <div id="app"></div>
