More work on Golden Layout refactor.

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,8 @@
   <meta name="apple-mobile-web-app-title" content="TEMPO DS">
   <link rel="manifest" href="site.webmanifest">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
+  <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
+  <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" />
   <title>Tempo Lite</title>
 </head>
 
